--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 influxdb_client==1.38.0
-matplotlib==3.7.3
-numpy==1.24.4
-pandas==2.0.3
-streamlit==1.27.2
-scikit-learn==1.3.1
+matplotlib==3.8.2
+numpy==1.26.2
+pandas==2.1.3
+scikit_learn==1.3.2
+streamlit==1.28.2
+urllib3==2.1.0
+filterpy==1.4.5
