--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ matplotlib==3.8.2
 numpy==1.26.2
 pandas==2.1.3
 scikit_learn==1.3.2
-streamlit==1.31.1
+streamlit==1.33.0
 urllib3==2.1.0
 filterpy==1.4.5
 networkx==3.0
@@ -13,3 +13,5 @@ stqdm==0.0.5
 
 # qpsolvers==4.3.0
 # osqp==0.6.3
+
+plotly==5.21.0
